--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   --secondary: #DD98B0;
   --main-font: #2E3538;
   --body-font: #666C6F;
+  --global: 0px 10px 40px 0px rgba(0, 0, 0, 0.2);
+  --button-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -21,7 +24,7 @@
 html {
   height: 100%;
   width: 100%;
-  background: var(--primary);
+  background: #fff;
 }
 
 body {
