--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,11 @@
 :root {
   --primary: #BED5CD;
   --secondary: #DD98B0;
+  --light: #F6F8F9;
   --main-font: #2E3538;
   --body-font: #666C6F;
   --global: 0px 10px 40px 0px rgba(0, 0, 0, 0.2);
+  --box: 0px 0px 10px 0px #00000042;
   --button-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
   
   font-synthesis: none;
@@ -24,7 +26,7 @@
 html {
   height: 100%;
   width: 100%;
-  background: #fff;
+  background: var(--light);
 }
 
 body {
@@ -35,6 +37,6 @@ body {
 }
 
 a {
-  color: #fff;
+  color: var(--body-font);
   text-decoration: none;
 }
