--- a/src/layout/main/index.scss
+++ b/src/layout/main/index.scss
@@ -59,6 +59,7 @@
         .card-title {
             font-family: 'Unna', serif;
             font-size: 2rem;
+            color: var(--main-font);
         }
         .card-body {
             font-family: 'Inter', serif;
@@ -66,13 +67,6 @@
             font-weight: 400;
             padding-bottom: 20px;
             border-bottom: 3px solid var(--secondary);
-        }
-    }
-    .hero {
-        display: flex;
-        flex-direction: column;
-        .hero-inner {
-            padding: 5em 6em 2em;
         }
         .text-box {
             display: flex;
@@ -91,28 +85,14 @@
                 }
             }
         }
-        .hero-card {
-            position: absolute;
-            top: 15em;
-            right: 6em;
-            max-width: 400px;
-            height: fit-content;
-            padding: 2em;
-            background: #fff;
-            box-shadow: var(--global);
-
-            .title-container {
-                display: flex;
-                align-items: center;
-                gap: 2rem;
-            }
-
-            .contact {
-                display: flex;
-                align-items: center;
-                gap: 1rem;
-            }
+    }
+    .hero {
+        display: flex;
+        flex-direction: column;
+        .hero-inner {
+            padding: 5em 6em 2em;
         }
+        
         .hero-img {
             width: 100%;
             height: 700px;
@@ -121,6 +101,13 @@
             display: block;
             opacity: 0.85;
             z-index: -1;
+        }
+    }
+    .second-section {
+        .second-inner {
+            display: flex;
+            gap: 10em;
+            padding: 5em 6em 2em;
         }
     }
 }
