--- a/src/layout/main/index.scss
+++ b/src/layout/main/index.scss
@@ -66,7 +66,7 @@
             font-size: 1rem;
             font-weight: 400;
             padding-bottom: 20px;
-            border-bottom: 3px solid var(--secondary);
+            color: var(--body-font);
         }
         .text-box {
             display: flex;
