Refactor HeroCard component layout and add Socials section

--- a/src/components/heroCard/index.scss
+++ b/src/components/heroCard/index.scss
@@ -4,7 +4,7 @@
     right: 6em;
     max-width: 400px;
     height: fit-content;
-    padding: 2em;
+    padding: 1em 2em;
     background: #fff;
     box-shadow: var(--global);
 
