--- a/src/components/doubleImage/index.scss
+++ b/src/components/doubleImage/index.scss
@@ -30,7 +30,6 @@
             &:hover {
                 transform: scale(1.04);
                 box-shadow: var(--global);
-                
             }
         }
     }
@@ -56,7 +55,40 @@
         width: 150px;
         height: 150px;
         opacity: 0.7;
-        background: repeating-linear-gradient(-55deg, rgba(255, 255, 255, 0) 0.8px, var(--primary) 1.6px, var(--primary) 3px, rgba(255, 255, 255, 0) 3.8px, rgb(255 0 0 / 0%) 10px);
+        background: repeating-linear-gradient(-55deg, rgba(255, 255, 255, 0) 0.8px, var(--primary) 1.6px, var(--primary) 5px, rgba(255, 255, 255, 0) 3.8px, rgb(255 0 0 / 0%) 10px);
         border-radius: 100px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .image-container {
+        justify-content: center;
+        padding-top: 1rem;
+
+        .image {
+            width: 150px;
+            height: 300px;
+        }
+
+        .subject-container {
+            position: absolute;
+            left: 0em;
+            bottom: 1em;
+            gap: 24px;
+
+            .card {
+                width: 100px;
+                height: 90px;
+            }
+        }
+
+        .square-shape {
+            right: 0;
+            left: initial;
+        }
+
+        .circle-shape {
+            bottom: -1em;
+            left: -1rem;
+        }
     }
 }
