--- a/src/components/heroCard/index.scss
+++ b/src/components/heroCard/index.scss
@@ -13,10 +13,29 @@
         align-items: center;
         gap: 2rem;
     }
+    
+    .div-line {
+        border: 1px solid var(--secondary);
+    }
 
     .contact {
         display: flex;
         align-items: center;
         gap: 1rem;
+    }
+}
+@media screen and (max-width: 768px) {
+    .hero-card {
+        top: 25em;
+        right: 3em;
+        max-width: 300px;
+
+        .title-container {
+            gap: 1rem;
+        }
+
+        .contact {
+            gap: 0.75rem;
+        }
     }
 }
