Refactor menu icon styles for improved SVG color consistency

--- a/src/components/menuToggle/index.scss
+++ b/src/components/menuToggle/index.scss
@@ -10,5 +10,8 @@
         height: 50px;
         font-size: 24px;
         cursor: pointer;
+        svg {
+            color: var(--body-font);
+        }
     }
 }
