--- a/src/layout/main/index.scss
+++ b/src/layout/main/index.scss
@@ -1,6 +1,5 @@
 .app {
     font-display: swap;
-
     .error-message {
         display: flex;
         flex-direction: column;
@@ -14,8 +13,8 @@
     .resources-page,
     .contact-page,
     .privacy-policy {
+        height: 100%;
         padding-top: 106px;
-        animation: fadeIn 1s forwards;
 
         h1 {
             font-family: 'Unna', serif;
@@ -85,6 +84,15 @@
                 }
             }
         }
+        .background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 500px;
+            background: linear-gradient(to bottom, var(--primary), var(--primary), var(--light));
+            z-index: -1;
+        }
     }
     .hero {
         display: flex;
@@ -99,9 +107,15 @@
             object-fit: cover;
             object-position: center;
             display: block;
-            opacity: 0.85;
+            opacity: 1;
             z-index: -1;
         }
+    }
+    .second-section,
+    .third-section,
+    .forth-section {
+        position: relative;
+        overflow: hidden;
     }
 }
 .back-to-top {
@@ -137,33 +151,87 @@
             animation: fadeIn 1s forwards;
     
             h1 {
-                font-size: 2.5rem;
+                font-size: 38px;
             }
     
             h2 {
-                font-size: 2rem;
+                font-size: 30px;
             }
     
             h3 {
-                font-size: 1.25rem;
+                font-size: 18px;
             }
     
             p {
-                font-size: 0.875rem;
+                font-size: 14px;
             }
     
             .subtitle {
-                font-size: 1.125rem;
+                font-size: 16px;
             }
     
             .card-title {
-                font-size: 1.5rem;
+                font-size: 20px;
             }
     
             .card-body {
-                font-size: 0.875rem;
+                font-size: 14px;
+            }
+            .text-box {
+                gap: 0.5rem;
+                width: 100%;
+
+                .hero-p {
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+
+                    .hero-indent {
+                        width: 7.5em;
+                        height: 2px;
+                        background: var(--secondary);
+                        border-radius: 5px;
+                    }
+                }
+            }
+
+            .background {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 500px;
+                background: linear-gradient(to bottom, var(--primary), var(--primary), var(--light));
+                z-index: -1;
             }
         }
+
+        .hero {
+            display: flex;
+            flex-direction: column;
+
+            .hero-inner {
+                padding: 2em 2em 12em;
+            }
+
+            .hero-img {
+                width: 100%;
+                height: 600px;
+                object-fit: cover;
+                object-position: center;
+                display: block;
+                opacity: 1;
+                z-index: -1;
+            }
+        }
+
+        .second-section,
+        .third-section,
+        .forth-section {
+            position: relative;
+            overflow: hidden;
+        }
+    
     }
     
     .back-to-top {
