--- a/src/components/heroCard/index.scss
+++ b/src/components/heroCard/index.scss
@@ -1,8 +1,8 @@
 .hero-card {
     position: absolute;
-    top: 15em;
+    top: 10em;
     right: 6em;
-    max-width: 400px;
+    max-width: 425px;
     height: fit-content;
     padding: 1em 2em;
     background: #fff;
@@ -16,6 +16,7 @@
     
     .div-line {
         border: 1px solid var(--secondary);
+        margin-bottom: 1em;
     }
 
     .contact {
@@ -26,9 +27,11 @@
 }
 @media screen and (max-width: 768px) {
     .hero-card {
-        top: 25em;
-        right: 3em;
-        max-width: 300px;
+        position: relative;
+        top: 3em;
+        right: initial;
+        max-width: 100%;
+        max-height: 470px;
 
         .title-container {
             gap: 1rem;
