Refactor Layout component structure; replace div with fragment and adjust styles for improved layout consistency

--- a/src/layout/main/index.scss
+++ b/src/layout/main/index.scss
@@ -1,5 +1,6 @@
 .app {
     font-display: swap;
+    font-family: 'Inter', serif;
     .error-message {
         display: flex;
         flex-direction: column;
@@ -13,8 +14,8 @@
     .resources-page,
     .contact-page,
     .privacy-policy {
-        height: 100%;
-        padding-top: 106px;
+        animation: fadeIn 1s forwards;
+        padding-top: 5rem;
 
         h1 {
             font-family: 'Unna', serif;
@@ -47,6 +48,7 @@
             font-size: 1.25rem;
             font-weight: bold;
             text-transform: uppercase;
+            padding-bottom: 1em;
             color: var(--secondary);
         }    
         .indent {
@@ -71,7 +73,7 @@
             display: flex;
             flex-direction: column;
             gap: 2rem;
-            width: 60%;
+            width: 50%;
             .hero-p {
                 display: flex;
                 align-items: center;
@@ -89,33 +91,34 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 500px;
-            background: linear-gradient(to bottom, var(--primary), var(--primary), var(--light));
+            height: 400px;
+            background: var(--background);
             z-index: -1;
         }
-    }
-    .hero {
-        display: flex;
-        flex-direction: column;
-        .hero-inner {
-            padding: 5em 6em 4em;
+        .hero {
+            display: flex;
+            flex-direction: column;
+
+            .hero-inner {
+                padding: 5em 6em 4em;
+            }
+
+            .hero-img {
+                width: 100%;
+                height: 600px;
+                object-fit: cover;
+                object-position: center;
+                display: block;
+                opacity: 1;
+                z-index: -1;
+            }
         }
-        
-        .hero-img {
-            width: 100%;
-            height: 600px;
-            object-fit: cover;
-            object-position: center;
-            display: block;
-            opacity: 1;
-            z-index: -1;
+
+        .second-section,
+        .third-section {
+            position: relative;
+            padding: 5em 6em;
         }
-    }
-    .second-section,
-    .third-section,
-    .forth-section {
-        position: relative;
-        overflow: hidden;
     }
 }
 .back-to-top {
@@ -148,14 +151,13 @@
         .resources-page,
         .contact-page,
         .privacy-policy {
-            animation: fadeIn 1s forwards;
     
             h1 {
-                font-size: 38px;
+                font-size: 32px;
             }
     
             h2 {
-                font-size: 30px;
+                font-size: 24px;
             }
     
             h3 {
@@ -184,52 +186,32 @@
                 .hero-p {
                     display: flex;
                     align-items: center;
-                    gap: 1rem;
-
-                    .hero-indent {
-                        width: 7.5em;
-                        height: 2px;
-                        background: var(--secondary);
-                        border-radius: 5px;
-                    }
                 }
             }
+            .hero {
+                display: flex;
+                flex-direction: column;
 
-            .background {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 500px;
-                background: linear-gradient(to bottom, var(--primary), var(--primary), var(--light));
-                z-index: -1;
+                .hero-inner {
+                    padding: 2em;
+                }
+
+                .hero-img {
+                    width: 100%;
+                    height: 500px;
+                    object-fit: cover;
+                    object-position: center;
+                    display: block;
+                    opacity: 1;
+                    z-index: -1;
+                }
             }
-        }
-
-        .hero {
-            display: flex;
-            flex-direction: column;
-
-            .hero-inner {
-                padding: 2em 2em 12em;
+            .second-section,
+            .third-section {
+                padding: 2em;
+                position: relative;
+                overflow: hidden;
             }
-
-            .hero-img {
-                width: 100%;
-                height: 600px;
-                object-fit: cover;
-                object-position: center;
-                display: block;
-                opacity: 1;
-                z-index: -1;
-            }
-        }
-
-        .second-section,
-        .third-section,
-        .forth-section {
-            position: relative;
-            overflow: hidden;
         }
     
     }
