--- a/src/layout/nav/index.scss
+++ b/src/layout/nav/index.scss
@@ -127,7 +127,7 @@ header {
             top: 30%;
             right: 0;
             width: 100%;
-            background: var(--primary);
+            background: var(--background);
             z-index: 9999;
 
             .active {
@@ -148,7 +148,7 @@ header {
                 flex-direction: column;
                 align-items: flex-start;
                 gap: 2.5rem;
-                margin-top: 3rem;
+                margin-top: 2rem;
                 padding: 3rem 5rem;
                 height: 120vh;
                 width: 100%;
