fix: update image alt text, add lazy loading, and adjust section styling in Tuition component

--- a/src/pages/tuition/index.scss
+++ b/src/pages/tuition/index.scss
@@ -38,6 +38,9 @@
             }
         }
     }
+    .third-section {
+        background-color: #fff;
+    }
     .forth-inner {
         display: flex;
         .reverse {
