--- a/src/pages/resources/index.scss
+++ b/src/pages/resources/index.scss
@@ -43,8 +43,8 @@
         .third-section {
             .third-inner {
                 .btn-container {
-                    flex-direction: column;
                     align-items: center;
+                    flex-wrap: wrap;
                     gap: 1em;
                     padding-bottom: 2em;
                 }
