--- a/src/layout/footer/index.scss
+++ b/src/layout/footer/index.scss
@@ -1,6 +1,6 @@
 footer {
     text-transform: uppercase;
-    background: var(--primary);
+    background: var(--background);
     color: var(--body-text);
     font-family: 'Unna', serif;
     .footer-container {
