feat: update card title class to square-title and add styling for improved typography

--- a/src/components/doubleImage/index.scss
+++ b/src/components/doubleImage/index.scss
@@ -33,6 +33,11 @@
                 transform: scale(1.04);
                 box-shadow: var(--global);
             }
+            .square-title {
+                font-size: 28px;
+                font-family: 'Unna', serif;
+                color: var(--main-font);
+            }
         }
     }
 
