--- a/src/components/doubleImage/index.scss
+++ b/src/components/doubleImage/index.scss
@@ -43,7 +43,7 @@
 
     .square-shape {
         position: absolute;
-        left: clamp(2rem, 30vw, 20rem);
+        right: 0;
         top: 0;
         z-index: -1;
         width: 150px;
@@ -56,7 +56,7 @@
     .circle-shape {
         position: absolute;
         left: -2rem;
-        bottom: 0;
+        top: 18rem;
         z-index: -1;
         width: 150px;
         height: 150px;
